[package]
name = "ark-sponge"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "An implementation of the cryptographic sponge functions for zkSNARK"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/sponge"
documentation = "https://docs.rs/ark-sponge/"
keywords = [ "zero-knowledge", "cryptography", "zkSNARK", "SNARK", "sponge" ]
categories = [ "cryptography" ]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[dependencies]
ark-ff = { git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features = false }
ark-ec = { git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features = false }

ark-serialize = { git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features = false }
ark-std = { git = "https://github.com/SRI-CSL/utils", default-features = false, version = "0.2.1-alpha.0" }


derivative = { version = "2.1.1", features = [ "use_core" ] }
digest = { version = "0.9.0", default_features = false }
rand_chacha = { version = "0.3.0", default-features = false }

# Dependencies for r1cs
ark-nonnative-field = { git = "https://github.com/SRI-CSL/nonnative", default-features = false, optional = true , branch = "v3_sri"}

ark-r1cs-std = {  git = "https://github.com/SRI-CSL/r1cs-std", branch = "v3_sri", default-features = false, optional = true }
ark-relations = { git = "https://github.com/SRI-CSL/snark", branch = "v3_sri", default-features = false, optional = true }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }

[dev-dependencies]
ark-test-curves = { git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features = false, features = ["bls12_381_curve"] }


[features]
default = [ "r1cs", "std" ]
r1cs = [ "ark-nonnative-field", "ark-relations", "ark-r1cs-std", "tracing" ]
std = [ "ark-ec/std", "ark-ff/std", "ark-nonnative-field/std", "ark-r1cs-std/std", "ark-relations/std", "ark-std/std", "ark-serialize/std" ]
